# wundradb

./: Cargo.toml  Manual.md  README.md
core/: Cargo.toml  lib.rs
core/sql/: engine.rs
core/storage/: bptree.rs  mod.rs
core/txn/: WriteAheadLog.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/raft/: mod.rs
crates/core/src/sql/: engine.rs
crates/core/src/storage/: bptree.rs
crates/core/src/txn/: mod.rs  wal.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
docs/: manual.txt
