[workspace]
members = [
    "crates/core",
    "crates/server", 
    "crates/cli"
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
sqlparser = "0.39"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
rustyline = "13.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"